--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -61,11 +61,11 @@ body {
   @apply text-neutral-400;
 }
 .headline {
-  @apply text-[2.5rem] sm:text-5xl font-bold !leading-snug text-center;
+  @apply text-3xl font-bold !leading-snug text-center;
 }
 
 .section-heading {
-  @apply text-3xl lg:text-4xl font-bold text-center mb-10 !leading-snug;
+  @apply text-2xl font-bold text-center mb-10 !leading-snug;
 }
 .section-subheading {
   @apply text-lg font-bold;
