--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -450,7 +450,7 @@ h2.react-datepicker__current-month {
 .loader {
   width: 22px;
   height: 22px;
-  border: 2px solid #fff;
+  border: 2px solid var(--clr-brand-sec);
   border-bottom-color: transparent;
   border-radius: 50%;
   display: inline-block;
@@ -499,4 +499,50 @@ h2.react-datepicker__current-month {
 .header {
   margin-bottom: 30px;
   text-align: center;
+}
+
+/* styles/globals.css */
+[data-radix-scroll-area-viewport] > * {
+  display: block !important; /* Override the default display */
+}
+
+.loader2 {
+  width: 8px;
+  height: 40px;
+  border-radius: 4px;
+  display: block;
+  margin: 20px auto;
+  position: relative;
+  background: currentColor;
+  color: orange;
+  box-sizing: border-box;
+  animation: animloader 0.3s 0.3s linear infinite alternate;
+}
+
+.loader2::after,
+.loader2::before {
+  content: "";
+  width: 8px;
+  height: 40px;
+  border-radius: 4px;
+  background: currentColor;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 20px;
+  box-sizing: border-box;
+  animation: animloader 0.3s 0.45s linear infinite alternate;
+}
+.loader2::before {
+  left: -20px;
+  animation-delay: 0s;
+}
+
+@keyframes animloader {
+  0% {
+    height: 48px;
+  }
+  100% {
+    height: 4px;
+  }
 }
